--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,9 @@ dist/
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules/
 /.pnp
 .pnp.js
-
+.next/
 # testing
 /coverage
 
